# spin-dioxus-csr

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  spin.toml  tailwind.config.js
src/: lib.rs
static/: index.html
